# roboteers-utils

./: .cproject  .project  .travis.yml  CMakeLists.txt  Makefile  README.md
src/utils/: Interpolable.h  InterpolatingDouble.cpp  InterpolatingDouble.h  RigidTransform2D.cpp  RigidTransform2D.h  RobotChains.h  Rotation2D.cpp  Rotation2D.h  Translation2D.cpp  Translation2D.h
test/: main.cpp  testrigidtransform.cpp  testrotation.cpp  testtranslation.cpp
